--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "saveup",
   "version": "0.1.0",
+  "author": "bencescher",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -8,8 +9,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "chart.js": "^2.9.3",
     "core-js": "^3.6.4",
+    "firebase": "^7.9.1",
     "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.0",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
   },
